--- a/index.html
+++ b/index.html
@@ -5,6 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Musik Goo</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Style untuk body */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f0f0f0;
+}
+
+/* Style untuk header */
+header {
+    background-color: #4CAF50;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
+
+/* Style untuk bagian artikel */
+section {
+    margin: 20px auto;
+    max-width: 800px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Style untuk artikel */
+.article {
+    margin-bottom: 20px;
+}
+
+.article h3 {
+    color: #333;
+}
+
+.article p {
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+/* Style untuk footer */
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+    </style>
 </head>
 <body>
     <header>
